Finaliza o Main e corrige bug